--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,13 @@
     <main>
       <section class="intro">
         <div class="intro__wrapper">
+          <div class="intro__background">
+            <div class="lines">
+              <div class="line"></div>
+              <div class="line"></div>
+              <div class="line"></div>
+            </div>
+          </div>
           <div class="intro__shadow"></div>
           <h1 class="intro__titles">
             <span class="intro__title">Katarzyna</span>
